Still fixing spacing issues

--- a/styles/about.css
+++ b/styles/about.css
@@ -37,6 +37,7 @@ h2 {
 nav {
     border-bottom: 1px solid hsl(0, 0%, 50%);
     height: 200px;
+    width: 100%;
     margin: auto;
     padding-top: 50px;
     padding-bottom: 50px;
