--- a/styles/casestudy.css
+++ b/styles/casestudy.css
@@ -26,6 +26,7 @@ p.section {
 nav {
     border-bottom: 1px solid hsl(0, 0%, 50%);
     height: 200px;
+    width: 100%;
     margin: auto;
     padding-top: 50px;
 }
